# backup-plugin

./: MANIFEST.in  README.md  pyproject.toml  setup.py
backup_plugin/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
backup_plugin/api/: serializers.py
backup_plugin/migrations/: 0001_initial.py  0002_backup_diff_info.py
backup_plugin/scripts/: create_backup_entries.py
backup_plugin/static/css/: dark.css
backup_plugin/templates/backup_plugin/: device_backup.html
backup_plugin/templatetags/: backup_filters.py
backup_plugin/utils/: unimus.py
