[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "backup-plugin"
version = "1.1.0"
authors = [
    {name = "Bryan Lynn", email = "bryankentlynn@gmail.com"},
]
description = "Netbox and Backup solution integration."
readme = "README.md"

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

requires-python = ">=3.10.0"
dependencies = []